modal dialogs resize with the window and disallow scrolling the page behind them [fixes #27473595]

--- a/scss/vendorish/_facebox.scss
+++ b/scss/vendorish/_facebox.scss
@@ -1,11 +1,13 @@
 @import "../_common.scss";
 
 #facebox {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: $dialog-z-index;
     text-align: left;
+    overflow-y: auto;
+    overflow-x: hidden;
 
     .popup {
         position: relative;
